# DSO-Controllab

./: .gitignore  ARTICLE_LINKEDIN.md  CONTRACTS.md  GITHUB.md  README.md  ROADMAP.md  VISION.md  pyproject.toml  results_contracts_100.json
.github/workflows/: ci.yml
src/dso_controllab/: __init__.py  cli.py  contracts.py  controllers.py  experiment.py  metrics.py  verifier.py  world.py
tests/: test_smoke.py
