[project]
name = "dso-controllab"
version = "0.1.0"
description = "Deterministic Systems Optimization control benchmark lab"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.scripts]
dso-controllab = "dso_controllab.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
